--- a/assignments/termProject/styles/medium.css
+++ b/assignments/termProject/styles/medium.css
@@ -29,3 +29,36 @@ fieldset { width:30%}
 }
 
 } /* End of @media screen query min-width: 500px */
+
+@media screen and (max-width: 650px) {
+	.navbar a:not(:first-child), .dropdown .dropbtn 
+	{display:none;}
+
+	.navbar a.icon { 
+		float:right;
+		display:block;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.navbar.responsive {position: relative;}
+	.navbar.responsive .icon {
+		position:absolute;
+		right:0;
+		top:0;
+		font-size: 15px;	}
+
+	.navbar.responsive a {
+		float: none;
+		display: block;
+		text-align: left;		}
+		
+	.navbar.responsive .dropdown {float: none;}
+	.navbar.responsive .dropdown-Content {position: relative;}
+	.navbar.responsive .dropdown .dropbtn {
+		display: block;
+		width: 100%;
+		text-align: left;
+	}
+	.hideSmall {display:none;}
+}s
