--- a/assignments/termProject/styles/small.css
+++ b/assignments/termProject/styles/small.css
@@ -312,8 +312,7 @@ in the heading  to match the logo */
 	margin-right: 2rem;
 	width: 100%;}
 
-#opening img { padding: 5px;
-height: 100%; width: auto;}
+#opening img { padding: 5px;}
 
 /* ------------------------------------- */
 /* --------- Call to Action  ----------- */
