--- a/assignments/termProject/styles/small.css
+++ b/assignments/termProject/styles/small.css
@@ -306,13 +306,14 @@ in the heading  to match the logo */
 #opening {
 	display: flex;
 	flex-wrap: nowrap;
-	flex-shrink: inherit;
+	overflow: hidden;
 	border-top: 4px solid #4F000B;
 	border-bottom: 2px solid #4F000B;
 	margin-right: 2rem;
-	width: 100%;}
+	width:90%;}
 
-#opening img { padding: 5px;}
+#opening img { padding: 5px;
+width:50%;}
 
 /* ------------------------------------- */
 /* --------- Call to Action  ----------- */
